--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS30-05FLEXPANELS</title>
+  <title>Flex Panels 💪</title>
   <link href='style.css' rel='stylesheet' />
 </head>
 <body>
@@ -35,6 +35,20 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel')
+
+    function toggleOpen() {
+        this.classList.toggle('open')
+    }
+
+    function toggleActive(e) {
+        if (e.propertyName.includes('flex')) {
+            this.classList.toggle('open-active')
+        }
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen))
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive))
 
   </script>
 </body>
